# bright-wolf-hop

./: Backend-dev-plan.md  README.md
backend/: .env  .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/: collections.py  database.py
backend/core/: config.py  security.py
backend/models/: friend.py  herd.py  notification.py  reflection.py  user.py
backend/routes/: auth.py  friends.py  herds.py  notifications.py  reflections.py  users.py
frontend/: .env  .env.production  .gitignore  package-lock.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: calendar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AuthPage.tsx  CreateHerdPage.tsx  CreateReflectionPage.tsx  FriendsPage.tsx  HerdDetailPage.tsx  HerdsPage.tsx  HistoryPage.tsx  HomePage.tsx  Index.tsx  NotificationsPage.tsx  ProfilePage.tsx  ReflectionDetailPage.tsx  SettingsPage.tsx
